// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-dao-ops e2e tests should process block with MEV Allow list: Super low relay count 1`] = `
Array [
  Finding {
    "addresses": Array [],
    "alertId": "MEV-LOW-RELAY-COUNT",
    "description": "There are only 0 relays in the allowed list.",
    "labels": Array [],
    "metadata": Object {},
    "name": "🚨 MEV Allow list: Super low relay count",
    "protocol": "ethereum",
    "severity": 4,
    "type": 4,
  },
]
`;

exports[`agent-dao-ops e2e tests should process block with huge buffered ETH amount and low deposit executor balance 1`] = `
Array [
  Finding {
    "addresses": Array [],
    "alertId": "LOW-DEPOSIT-EXECUTOR-BALANCE",
    "description": "Balance of deposit executor is 1.9232. This is extremely low! 😱",
    "labels": Array [],
    "metadata": Object {},
    "name": "⚠️ Low deposit executor balance",
    "protocol": "ethereum",
    "severity": 4,
    "type": 2,
  },
  Finding {
    "addresses": Array [],
    "alertId": "HUGE-BUFFERED-ETH",
    "description": "There are 41420.0866 buffered ETH in DAO for more than 1 hour(s)",
    "labels": Array [],
    "metadata": Object {},
    "name": "🚨 Huge buffered ETH amount",
    "protocol": "ethereum",
    "severity": 4,
    "type": 3,
  },
]
`;

exports[`agent-dao-ops e2e tests should process block with low staking limit (10%) 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "LOW-STAKING-LIMIT",
  "description": "Current staking limit is 7237.74 ETH this is lower than 10% of max staking limit 150000.00 ETH",
  "labels": Array [],
  "metadata": Object {},
  "name": "⚠️ Staking limit below 10%",
  "protocol": "ethereum",
  "severity": 1,
  "type": 4,
}
`;

exports[`agent-dao-ops e2e tests should process block with low staking limit (30%) 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "LOW-STAKING-LIMIT",
  "description": "Current staking limit is 7237.74 ETH this is lower than 30% of max staking limit 150000.00 ETH",
  "labels": Array [],
  "metadata": Object {},
  "name": "📉 Staking limit below 30%",
  "protocol": "ethereum",
  "severity": 1,
  "type": 4,
}
`;

exports[`agent-dao-ops e2e tests should process tx with EL rewards vault set and staking changes 1`] = `
Array [
  Finding {
    "addresses": Array [],
    "alertId": "LIDO-STAKING-LIMIT-SET",
    "description": "Staking limit was set with:
Max staking limit: 150000000000000000000000
Stake limit increase per block: 23437500000000000000",
    "labels": Array [],
    "metadata": Object {
      "args": "150000000000000000000000,23437500000000000000",
    },
    "name": "⚠️ Lido: Staking limit set",
    "protocol": "ethereum",
    "severity": 4,
    "type": 4,
  },
  Finding {
    "addresses": Array [],
    "alertId": "LIDO-STAKING-RESUMED",
    "description": "Staking was resumed!",
    "labels": Array [],
    "metadata": Object {
      "args": "",
    },
    "name": "✅ Lido: Staking resumed",
    "protocol": "ethereum",
    "severity": 4,
    "type": 4,
  },
]
`;

exports[`agent-dao-ops e2e tests should process tx with EL rewards withdrawal limit set 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process tx with added guardian 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process tx with changed distribution fee 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process tx with changed guardian quorum 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process tx with changed max deposit 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process tx with changed min deposit block 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process tx with changed owner of the contract 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process tx with changed protocol contracts 1`] = `undefined`;

exports[`agent-dao-ops e2e tests should process tx with received EL rewards 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "LIDO-EL-REWARDS-RECEIVED",
  "description": "Rewards amount: 142.21 ETH",
  "labels": Array [],
  "metadata": Object {
    "args": "142210964953261078203",
  },
  "name": "✅ Lido: EL rewards received",
  "protocol": "ethereum",
  "severity": 1,
  "type": 4,
}
`;

exports[`agent-dao-ops e2e tests should process tx with transferred ownership of Insurance fund 1`] = `
Array [
  Finding {
    "addresses": Array [],
    "alertId": "INS-FUND-OWNERSHIP-TRANSFERRED",
    "description": "Owner of the insurance fund was transferred from [0x0000000000000000000000000000000000000000](https://etherscan.io/address/0x0000000000000000000000000000000000000000) to [0xbD829522d4791b9660f59f5998faE451dACA4E1C](https://etherscan.io/address/0xbD829522d4791b9660f59f5998faE451dACA4E1C)",
    "labels": Array [],
    "metadata": Object {
      "args": "0x0000000000000000000000000000000000000000,0xbD829522d4791b9660f59f5998faE451dACA4E1C",
    },
    "name": "🚨 Insurance fund: Ownership transferred",
    "protocol": "ethereum",
    "severity": 5,
    "type": 4,
  },
  Finding {
    "addresses": Array [],
    "alertId": "INS-FUND-OWNERSHIP-TRANSFERRED",
    "description": "Owner of the insurance fund was transferred from [0xbD829522d4791b9660f59f5998faE451dACA4E1C](https://etherscan.io/address/0xbD829522d4791b9660f59f5998faE451dACA4E1C) to [0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c](https://etherscan.io/address/0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c)",
    "labels": Array [],
    "metadata": Object {
      "args": "0xbD829522d4791b9660f59f5998faE451dACA4E1C,0x3e40D73EB977Dc6a537aF587D48316feE66E9C8c",
    },
    "name": "🚨 Insurance fund: Ownership transferred",
    "protocol": "ethereum",
    "severity": 5,
    "type": 4,
  },
]
`;
